projects/vb6parse/snapshots/parsers/cst/library/string/mid/mid_iif.snap
---
source: projects/vb6parse/tests/library/string/mid.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: IIf
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: CallExpression
                          children:
                            - kind: MidKeyword
                              text: Mid
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: IdentifierExpression
                                      children:
                                        - kind: TextKeyword
                                          text: text
                                - kind: Comma
                                  text: ","
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "1"
                                - kind: Comma
                                  text: ","
                                - kind: Whitespace
                                  text: " "
                                - kind: Argument
                                  children:
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "1"
                            - kind: RightParenthesis
                              text: )
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"A\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"Yes\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Argument
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"No\""
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
